--- a/docs/episode-transcriptions/139.md
+++ b/docs/episode-transcriptions/139.md
@@ -1,47 +1,43 @@
-SPEAKER_00 (00:00 - 00:13):  So we're doing a mobile app for open agents called Onyx. This is a very early version. We'll watch it in about two weeks, and I thought we'd have some fun with our arrival OpenAI.
-SPEAKER_00 (00:13 - 00:45):  Today's Day 1 of the 12 Days of OpenAI, by the way. And, you know, we began this video series a year ago, the day after DevDay, and making the point that we don't think that the future of AI, this agent economy that's coming should be owned by Microsoft, and people of that ilk, closed source, megacorporations, pretending to be open, but not really open, and there should be truly open versions of this.
-SPEAKER_00 (00:46 - 01:01):  We've built a whole bunch of stuff, a few different product launches, a varying success over the last year, the last video episode 138 had to recap and what we've done, lessons learned, what we're going to do next.
-SPEAKER_00 (01:01 - 01:22):  And, we've been thinking about like what the four factor of that next thing should be. Our most recent product has been this pro dashboard we've been using privately with businesses, and I'm using this repeat line of work.
-SPEAKER_00 (01:22 - 01:33):  This is great, but like it's getting to the point where there's like so many little fiddles and dials, and it's really truly a power tool, not easy for new users.
-SPEAKER_00 (01:33 - 01:44):  So it's like, you know, what should the final proper form factor for AI, or interacting with your personal AI agent be? People have been talking about this for a while.
-SPEAKER_00 (01:44 - 02:09):  There's a funny video here back in April making fun of the rabbit device. If I had to redesign this thing, I'll just listen.
-SPEAKER_00 (02:09 - 02:21):  It's a phone. Are you going to carry around a separate device? No. So, stretch goal we said in April was to put open agents on your phone. A good AI agent, Mopalopt does not exist.
-SPEAKER_00 (02:21 - 02:32):  And shut, so we're doing this now, and what I think we'll do is kind of mimic and make fun of a little bit our rival open AI here.
-SPEAKER_00 (02:32 - 02:46):  And we're going to do 12, they're doing 12 days of open AI. We're going to do 12 nights of open agents every day matching their pace every week day from now through December 20th.
-SPEAKER_00 (02:46 - 03:07):  We're going to do our own video here, kind of announcing different features of the new app on X and by the end of the process, probably not at the very end maybe three quarters of the way through, we will launch the app to at least test flight and hopefully the Android equivalent there.
-SPEAKER_00 (03:07 - 03:22):  But yeah, we're going to launch Onyx for Android and iOS this month. And it's a little more on the kind of thoughts behind this and why we're doing this. Let's see here.
-SPEAKER_00 (03:22 - 03:34):  So, this is kind of building on some ideas that I fleshed out during the agents hackathon in San Francisco a few months ago by craft ventures. That's David Saxx's fun.
-SPEAKER_00 (03:34 - 03:47):  Congratulations to the new crypto and AI XR from Trump. That's awesome. But the kind of thesis here is what we're really building on for Onyx. So, I'll just read a bit of this. So, there's no good way to control AI agents on a mobile phone.
-SPEAKER_00 (03:47 - 03:59):  There should be an app for that. Magency now Onyx is a mobile app that lets you make a wish, aka just say what you want into one text box and see a feed of updates from your agents working.
-SPEAKER_00 (03:59 - 04:20):  That back end had this kind of experimental agenda loop based on this intelligent GoExport algorithm. May or may not proceed with that. But building alongside of that this idea that what if agents can access a shared global archive of events so they can learn from each other as well as a shared global skill library.
-SPEAKER_00 (04:20 - 04:33):  A shared global functions tool calling that kind of thing as well as applying that same concept to data shared data feeds. This apps feed of updates, this stream of master events.
-SPEAKER_00 (04:33 - 04:50):  And this was an attempt to square the circle of a consumer facing UX for controlling multiple agents and a decentralized architecture enabling an open ecosystem of extensible agents that interoperate and evolve to ambitious for a 24 hour hackathon but excited to build on this with agents.
-SPEAKER_00 (04:50 - 05:04):  So, that's what we are doing. And we're kind of like mushing together a bunch of work that we've done separately over the last year and a half.
-SPEAKER_00 (05:04 - 05:16):  So, about a year ago we switched and renamed the company from GPU Topia or from Arcade Labs' name of the company to open agents.
-SPEAKER_00 (05:16 - 05:32):  But before that we did a lot of work on an open source, noster, commerce app called Arcade, that's all open source, group chat, commerce.
-SPEAKER_00 (05:32 - 05:52):  Decided to pivot that to AI but anyway we've got all this code of this like gorgeous, well-designed, noster client. And for those who don't know about noster, noster we think is going to be the logical, decentralized yet not blockchain or crypto-scan bullshit.
-SPEAKER_00 (05:52 - 06:05):  Substrate for agents to be able to communicate with each other. It pairs very well with Bitcoin and Lightning payments so you can have both payments and data running alongside each other.
-SPEAKER_00 (06:05 - 06:17):  Those are the two kinds of things that people try to say that you need some chain other than blockchain, Bitcoin 4 but Bitcoin and noster combined. Great, for that.
-SPEAKER_00 (06:17 - 06:28):  Fortunately, we are able to do this very easily. There's a React Native SDK from this awesome company called Breeze. We'll get further into detail in one of those.
-SPEAKER_00 (06:28 - 06:40):  Over the next 12 days about this but the idea is that we can drop in a single SDK for Android and iOS. You have a tip 39, like 12-word seed phrase that controls your Bitcoin Lightning wallet.
-SPEAKER_00 (06:40 - 06:51):  And then from that same seed phrase, we can generate your noster identity. So everything from just that 12-word account.
-SPEAKER_00 (06:51 - 07:02):  So in the app itself, you can envision that you've got kind of the main feed, or the main screen, should be like that idea I mentioned with magency.
-SPEAKER_00 (07:02 - 07:16):  Like you say what you want and then stuff happens. And things happen in the background. The agent is communicating with other agents and services that can fulfill your request, seeing if you should have permission to different data sets or whatever that looks like.
-SPEAKER_00 (07:16 - 07:29):  And some of these other tabs here will let you kind of inspect and drill down into the details of that. If you want to kind of micromanage or whatever that is, set budgets for different things. But it really should be a form factor of you have a phone.
-SPEAKER_00 (07:29 - 07:44):  Everyone's already carrying a phone. It should just be an app on the phone. There should be a button. You should be able to talk to it. And this stuff should happen. You can envision that there will be a companion web app in case you need to like paste a bunch of text in or something like that.
-SPEAKER_00 (07:44 - 07:56):  But for some of these other tabs at the bottom, you can envision that tab one is like a feed of all the different events. Maybe in your network you've got friends or other agents or your agent is like making friends with other agents.
-SPEAKER_00 (07:56 - 08:15):  You know, some kind of community tab that's going to be a Bitcoin wallet there. And then just kind of like a profile menu on the right. This is what we're starting with. This is what we're launching with. And then we're going to do these video 12 videos over the next 12 week days where we'll kind of go deep dives on all these screens.
-SPEAKER_00 (08:15 - 08:27):  I'm still building this, you know, building it extremely rapidly, probably because we have a lot of this code done already. And partly just because I'm building super fast with open agents. It's going to be great to kind of let you see kind of inside the building process.
-SPEAKER_00 (08:27 - 08:38):  This will be all open source, probably in a couple days. I'll open source to repo. And then we'll kind of gear up for a big launch by the end of the process.
-SPEAKER_00 (08:38 - 08:49):  And then we will have something that kind of matches together. A lot of the great ideas that we've built already. So we had this Noster Commerce app.
-SPEAKER_00 (08:49 - 09:02):  Fairy was this kind of project where we like thought that we would have like a little kind of magical warb that kind of the same idea. Like a whole magical orb that you would talk to. We didn't have the kind of like big plug-in system and centralized ecosystem idea connected to that yet.
-SPEAKER_00 (09:02 - 09:18):  GPU Topia, that was a great network that we launched that let people run AI models on their computer and sell access to it in exchange for lightning sats. Got had a whole bunch of seller demand, not really much buyer demand for that.
-SPEAKER_00 (09:18 - 09:32):  Hard to compete against the like multi billion dollar people. And the expectations set by that but you know this working idea of shared compute. I think we're going to tap back into that using Noster potentially with nip 90.
-SPEAKER_00 (09:32 - 09:51):  This idea that an app can request a thing like an inference and then multiple people can compete for that. That uses an existing concept called the defending machines from some of the developer guys behind Noster.
-SPEAKER_00 (09:51 - 10:03):  You read more about that. We'll do probably a video just on all of that. And then we had our agent store, this idea that you can create your own custom agents.
-SPEAKER_00 (10:03 - 10:19):  That was kind of like the big thrust of the original point of this series was where let's build our own version of the GPT store. We launched that didn't get too much traction probably because the like GPT is really sucked and we didn't have the like tool calling piece represented.
-SPEAKER_00 (10:20 - 10:32):  Then we kind of went on the hunt for what's the paying use case people are going to care about this idea of like an automated coding agent. And then kind of finding people that are going to actually pay for that like connecting it to actual real business use cases.
-SPEAKER_00 (10:32 - 10:55):  Point is that we've built a whole bunch of infrastructure call it like a whole bunch of glorified R&D over the last year. And we now have clarity that we want to kind of combine all of this into one beautiful app called annex.
-SPEAKER_00 (10:55 - 11:10):  So we're going to kind of smush as much of that as we can realistically fit into a mobile app over the next two weeks. We're going to document that process over the next 12 videos and hopefully by the end of that process get you in and get some feedback from you.
-SPEAKER_00 (11:11 - 11:29):  And we'll have the coolest, awesomest, bestest open source truly open AI agent app and you know product that should bootstrap a global decentralized AI agents marketplace running on open protocols accessible to everybody.
-SPEAKER_00 (11:29 - 11:33):  And you don't even have to pay us $200 a month. Get in.
+So we're doing a mobile app for Open Agents called Onyx. This is a very early version. We'll watch it in about two weeks, and I thought we'd have some fun with our rival OpenAI.
+
+Today's Day 1 of the 12 Days of OpenAI, by the way. We began this video series a year ago, the day after DevDay, making the point that we don't think the future of AI—the agent economy that's coming—should be owned by Microsoft and similar closed-source megacorporations pretending to be open, but not really open. There should be truly open versions of this.
+
+We've built a whole bunch of stuff, a few different product launches, with varying success over the last year. The last video episode 138 had a recap of what we've done, lessons learned, and what we're going to do next.
+
+We've been thinking about what the next four factors should be. Our most recent product has been this pro dashboard we've been using privately with businesses, and I'm using this repeat line of work. This is great, but it's getting to the point where there are so many little fiddles and dials, and it's truly a power tool, not easy for new users.
+
+So, what should the final proper form factor for AI, or interacting with your personal AI agent, be? People have been talking about this for a while. There's a funny video from back in April making fun of the rabbit device. If I had to redesign this thing, I'd just listen.
+
+It's a phone. Are you going to carry around a separate device? No. So, the stretch goal we set in April was to put Open Agents on your phone. A good AI agent, MopAlopt, does not exist. So we're doing this now, and what I think we'll do is mimic and make fun of a little bit our rival OpenAI here.
+
+They're doing 12 Days of OpenAI. We're going to do 12 Nights of Open Agents, matching their pace every weekday from now through December 20th. We're going to do our own videos, kind of announcing different features of the new app on X, and by the end of the process—probably not at the very end, maybe three quarters of the way through—we will launch the app to at least TestFlight and hopefully the Android equivalent there.
+
+But yeah, we're going to launch Onyx for Android and iOS this month. There's a little more on the kind of thoughts behind this and why we're doing this. Let's see here.
+
+This is building on some ideas that I fleshed out during the Agents Hackathon in San Francisco a few months ago by Craft Ventures, David Saxx's fun. Congratulations to the new crypto and AI XR from Trump. That's awesome. But the kind of thesis here is what we're really building on for Onyx. So, I'll just read a bit of this:
+
+There's no good way to control AI agents on a mobile phone. There should be an app for that. Magency now Onyx is a mobile app that lets you make a wish, aka just say what you want into one text box and see a feed of updates from your agents working.
+
+The backend has this kind of experimental agenda loop based on this intelligent GoExport algorithm. May or may not proceed with that. But building alongside that is the idea that what if agents can access a shared global archive of events so they can learn from each other, as well as a shared global skill library—a shared global functions tool, calling that kind of thing—as well as applying that same concept to data shared data feeds. This app's feed of updates, this stream of master events.
+
+This was an attempt to square the circle of a consumer-facing UX for controlling multiple agents and a decentralized architecture enabling an open ecosystem of extensible agents that interoperate and evolve. Ambitious for a 24-hour hackathon, but excited to build on this with agents.
+
+So, that's what we are doing. We're kind of mushing together a bunch of work that we've done separately over the last year and a half. About a year ago, we switched and renamed the company from GPU Topia or Arcade Labs to Open Agents. But before that, we did a lot of work on an open-source, Noster commerce app called Arcade, that's all open source—group chat, commerce. We decided to pivot that to AI, but anyway, we've got all this code for this gorgeous, well-designed Noster client. For those who don't know about Noster, Noster is going to be the logical, decentralized yet not blockchain or crypto-scan bullshit substrate for agents to communicate with each other. It pairs very well with Bitcoin and Lightning payments, so you can have both payments and data running alongside each other.
+
+Those are the two kinds of things that people try to say you need some chain other than blockchain, Bitcoin for. But Bitcoin and Noster combined are great for that. Fortunately, we are able to do this very easily. There's a React Native SDK from this awesome company called Breeze. We'll get further into detail in one of those over the next 12 days, but the idea is that we can drop in a single SDK for Android and iOS. You have a 12-word seed phrase that controls your Bitcoin Lightning wallet, and from that same seed phrase, we can generate your Noster identity. So everything from just that 12-word account.
+
+In the app itself, you can envision that you've got kind of the main feed, or the main screen, like that idea I mentioned with Magency. You say what you want, and then stuff happens in the background. The agent is communicating with other agents and services that can fulfill your request, seeing if you should have permission to different data sets or whatever that looks like. Some of these other tabs here will let you inspect and drill down into the details of that. If you want to micromanage or set budgets for different things, but it really should be a form factor of having a phone.
+
+Everyone's already carrying a phone. It should just be an app on the phone. There should be a button. You should be able to talk to it, and this stuff should happen. You can envision that there will be a companion web app in case you need to paste a bunch of text in or something like that. But for some of these other tabs at the bottom, you can envision that tab one is like a feed of all the different events. Maybe in your network you've got friends or other agents, or your agent is making friends with other agents. Some kind of community tab, a Bitcoin wallet there, and then just kind of a profile menu on the right.
+
+This is what we're starting with and launching with. We're going to do these 12 videos over the next 12 weekdays, where we'll do deep dives on all these screens. I'm still building this, building it extremely rapidly, probably because we have a lot of this code done already and partly just because I'm building super fast with Open Agents. It's going to be great to let you see inside the building process.
+
+This will all be open source, probably in a couple of days. I'll open source the repo, and then we'll gear up for a big launch by the end of the process. We'll have something that matches together a lot of the great ideas that we've built already. We had this Noster Commerce app, Fairy—a project where we thought we would have a magical orb that you would talk to. We didn't have the big plug-in system and centralized ecosystem idea connected to that yet.
+
+GPU Topia was a great network that we launched that let people run AI models on their computer and sell access to it in exchange for Lightning sats. Had a whole bunch of seller demand, not much buyer demand. Hard to compete against multi-billion dollar companies and the expectations set by that. But this working idea of shared compute—I'm going to tap back into that using Noster, potentially with Nip 90. The idea is that an app can request something like an inference, and then multiple people can compete for that. This uses an existing concept called the Defending Machines from some of the developer guys behind Noster. You can read more about that; we'll probably do a video just on all of that.
+
+We also had our Agent Store, the idea that you can create your own custom agents. That was the big thrust of the original point of this series: let's build our own version of the GPT store. We launched that but didn't get much traction, probably because GPT is really stuck and we didn't have the tool calling piece represented.
+
+Then we went on the hunt for the paying use case people are going to care about—like an automated coding agent—and finding people who are actually going to pay for that, connecting it to real business use cases. The point is that we've built a whole bunch of infrastructure, a whole bunch of glorified R&D over the last year. Now we have clarity that we want to combine all of this into one beautiful app called Onyx.
+
+We're going to smush as much of that as we can realistically fit into a mobile app over the next two weeks. We'll document that process over the next 12 videos and hopefully, by the end of that process, get some feedback from you. We'll have the coolest, awesomest, bestest open-source, truly open AI agent app and product that should bootstrap a global decentralized AI agents marketplace running on open protocols, accessible to everybody. And you don't even have to pay us $200 a month. Get in.
