--- a/docs/episode-transcriptions/140.md
+++ b/docs/episode-transcriptions/140.md
@@ -1,3 +1,5 @@
-SPEAKER_00 (00:01 - 00:32): All right as of 2seconds ago Onyx is open sourcewith a whopping 1 starlittle tour So Onyx isyour personal AI agent that responds tovoice commands growssmarter and more capable over time andearns you Bitcoin It's partof the open agents networkwhere every agent makes all agents smarterLaunching December 20You say itOnyx does it SimpleCrowdsource agent tool and knowledge base built inBitcoin wallet to buy and sell AI servicesLevel up your agent and earn Bitcoin awards It
-SPEAKER_00 (00:32 - 01:04): does stuffpay earn in Bitcoin If you're contributing tothe agents plugging depositoryor knowledge bases or doing stuff that's relevantthat you're happy for other people to use earnsome Bitcoin CoolWe're building on a Bitcoin protocol Bitcoin lightningnetworkmodel context protocol We'll do uhdifferent videos on that stuff You can read about the priorwork video seriesand uh there's more stuff in the docs folder about kind ofdifferent systems that we're building outAnd uh we'll keep that short
-SPEAKER_00 (01:04 - 01:08): See you Monday night Enjoy your weekendSee you Monday night Enjoy your weekend
+All right, as of 2 seconds ago, Onyx is open source with a whopping 1 star. So Onyx is your personal AI agent that responds to voice commands, grows smarter and more capable over time, and earns you Bitcoin. It's part of the Open Agents network where every agent makes all agents smarter. Launching December 20. You say it, Onyx does it. Simple crowdsourced agent tool and knowledge base, built-in Bitcoin wallet to buy and sell AI services. Level up your agent and earn Bitcoin awards.
+
+It does stuff, pays, earns in Bitcoin. If you're contributing to the agents' plugin repository or knowledge bases, or doing stuff that's relevant and that you're happy for other people to use, earn some Bitcoin. Cool. We're building on a Bitcoin protocol, Bitcoin Lightning Network model context protocol. We'll do different videos on that stuff. You can read about the prior work video series and there's more stuff in the docs folder about kind of different systems that we're building out. And we'll keep that short.
+
+See you Monday night. Enjoy your weekend. See you Monday night. Enjoy your weekend.
