--- a/docs/episode-transcriptions/001.md
+++ b/docs/episode-transcriptions/001.md
@@ -1,5 +1,9 @@
-SPEAKER_00 (00:00 - 00:31):  Hey folks, in this video series, we're going to build an open platform already built by agents Well, it became clear from open AIs dev day yesterday that they agents as the future they want to own it along with Microsoft and We don't think the future of AI should be owned by the closed source megacore
-SPEAKER_00 (00:35 - 01:05):  Capture if you remember from our last video Yeah, we did a previous video series kind of going into why we Yeah, we're going to continue that a lot in this So we're going to build an open version of an agent's platform With open models Data sets open money Bitcoin Open everything. We've got a little bit of code already done for this
-SPEAKER_00 (01:06 - 01:41):  But open to repo that's open source hpl3 And we're going to kind of document things here as we go. So it's easy to follow along Preview and we're going to be realigning our Bitcoin bounty pool We've got most of the we've awarded some of these. We've still got about a hundred grand bounties ready the developers to Help We've got a wiki with a little bit of initial information here
-SPEAKER_00 (01:41 - 02:13):  You can read about our principles. We want to ship early and often Generate and share revenue Bitcoin where it's helpful. We're not going to do any crypto shitcoin distracted And we're going to build four users You have a wait list up and I just liked it a Of the answers that people Bited from the wait lists are How do you want to use AI agents for programming for trading and financial analysis keyword research writing articles I'd like to get optimized
-SPEAKER_00 (02:14 - 02:32):  We want to build in the direction of enabling all of these users So follow along join our discord if you want That about any of this You
+Hey folks, in this video series, we're going to build an open platform already built by agents. Well, it became clear from OpenAI's Dev Day yesterday that they see agents as the future, and they want to own it along with Microsoft. We don't think the future of AI should be owned by a closed-source mega-corp.
+
+If you remember from our last video, yeah, we did a previous video series going into why we're doing this. We're going to continue that a lot here. So, we're going to build an open version of an agents’ platform with open models, data sets, open money (Bitcoin), open everything. We've got a little bit of code already done for this.
+
+We have an open-source repo that's AGPL3, and we're going to document things as we go so it's easy to follow along. As a preview, we're going to be realigning our Bitcoin bounty pool. We've awarded some of these bounties already, and we've still got about a hundred grand in bounties ready for developers to help. We've got a wiki with a bit of initial information here.
+
+You can read about our principles. We want to ship early and often, generate and share revenue in Bitcoin where it's helpful. We're not going to do any crypto "shitcoin" distractions. We're going to build for users. We have a waitlist up, and I just liked a lot of the answers that people provided from the waitlist. They said they want to use AI agents for programming, for trading and financial analysis, keyword research, writing articles—just to get optimized.
+
+We want to build in the direction of enabling all of these users. So, follow along. Join our Discord if you want to talk about any of this.
