--- a/docs/episode-transcriptions/095.md
+++ b/docs/episode-transcriptions/095.md
@@ -1,12 +1,19 @@
-SPEAKER_01 (00:05 - 00:18):  Next on our roadmap is as you go revenue sharing based streaming month Losers of eight builders of agent eventually I first heard the term streaming money years ago Early bit the full video is worth watching
-SPEAKER_00 (00:21 - 00:54):  Streaming video change the thing What happened now think about this for a second if I can do payments that are on a Millie seconds see and that are as low as a Why not get your salary pay every minute when you do micropayments over a milliseconds the term Cash flow takes on a whole different meaning
-SPEAKER_00 (00:55 - 01:24):  Cash is a flow. It's a continuous stream that has no meaning to an amount when I say streaming money Cross to what that does What that does Aid I don't know what that will yet, but I It's gonna be big
-SPEAKER_01 (01:25 - 01:55):  That's what we As much as possible as fast as possible Experience on opening most the fastest the best and Bitcoin so maybe you have a job that Maybe you qualify for X creator payouts, which is It pays you every
-SPEAKER_01 (01:56 - 02:27):  eventually kind of that's my summary of it every month after 60 days if you I don't even meet the criteria I don't have 5 million impressions and then descriptions We could do It doesn't think that I'm Whatever so X yeah, you know we can improve on that dramatic we can improve on open a eyes
-SPEAKER_01 (02:27 - 03:01):  Implementation by infinity percent because they're not paying you at all But we'll pay you every minute and maybe soon it may be faster than that, but I'll be happy if we can just get you That'd be cool. All right, so here's how this works Here's how you get paid you sign up That's You do something valuable and That could be creating an agent that's so much And write an agent plug in or soon you can do other things like redo an agent
-SPEAKER_01 (03:02 - 03:37):  Burr an agent write a post Valuable what do we mean by valuable we mean someone finds value in what you're doing that they're willing to pay for That's it. That's the measuring stick if someone pays for it whether they are using your agent and paying via agent credits That Whether you're referring an agent and then that person pays for Yeah, it's for you're writing a post that like someone tips
-SPEAKER_01 (03:41 - 04:16):  That one has paid for it and then you get paid you'll get all some or most of that depending on For things like agents probably there'll be multiple people who will get paid like anybody who writes a bug in that gets you We're gonna take a cut, but Anything that you do that's valuable when there's payments Aging all of it and what this allows for is really fast feedback loops if you put up an agent that nobody cares about You know that you haven't to build something useful or you haven't put it in right people and you just
-SPEAKER_01 (04:17 - 04:52):  Mark Market forces hooray, so we think this is gonna start a flywheel That's gonna start really speeding up particularly once we have agents that do Here is that we want to Build the best agents and then sell them So we think that this will get increasingly fast once we get our plugins UI Probably the first We've got about 15 of these plugins For the bounties those bindings are ending today
-SPEAKER_01 (04:52 - 05:24):  But But the plugins from now on are gonna be paid Repshare So the builder of an agent Yeah, the UI is gonna get some payment any plugins that are used and upgraded with it now they're doing things like Bitcoin stats you want your age pull in nation about the mempool or the fees or the nodes or blah blah blah
-SPEAKER_01 (05:25 - 06:01):  Click that and now your agent has access to that Got a lot of that kind of functionality bill. We just got to kind of hook it up to First we want to get this get the And I'm holding this also this is kind of like the Doing an example payments like a split Okay, so the next few videos we're going to
-SPEAKER_01 (06:02 - 06:23):  go off payments Payouts how we're making all this information publicly transparent and inspectable the accounting dashboards and Agent credit all that stuff are gonna be building this week Next week we'll start lean Okay
+Next on our roadmap is, as you go, revenue sharing based streaming money for builders of agents. Eventually, I first heard the term "streaming money" years ago. Early bit—the full video is worth watching.
+
+> Streaming money changes things. Think about this for a second: if I can do payments that are in milliseconds and that are as low as a... Why not get your salary paid every minute when you do micropayments in milliseconds? The term "cash flow" takes on a whole different meaning.
+
+> Cash is a flow. It's a continuous stream that has no fixed amount. When I say streaming money, what that does... What that does, I don't know yet, but it's gonna be big.
+
+That's what we want— as much as possible, as fast as possible. Experience on opening the fastest, the best in Bitcoin. So, maybe you have a job that... Maybe you qualify for creator payouts, which is... It pays you every...
+
+Eventually, kind of, that's my summary of it: every month after 60 days, if you... I don't even meet the criteria. I don't have 5 million impressions and then descriptions. We could do... It doesn't think that I'm... Whatever. So, yeah, you know, we can improve on that, dramatically. We can improve on OpenAI's implementation by infinity percent because they're not paying you at all. But we'll pay you every minute and maybe soon it may be faster than that, but I'll be happy if we can just get you. That'd be cool.
+
+All right, so here's how this works. Here's how you get paid: you sign up. You do something valuable, and that could be creating an agent, writing an agent plug-in, or soon you can do other things like redo an agent, write an agent, write a post.
+
+Valuable—what do we mean by valuable? We mean someone finds value in what you're doing that they're willing to pay for. That's it. That's the measuring stick. If someone pays for it, whether they are using your agent and paying via agent credits, or you're referring an agent and then that person pays for it, or you're writing a post that someone tips, that one has paid for it and then you get paid. You'll get all, some, or most of that depending on. For things like agents, probably there'll be multiple people who will get paid, like anybody who writes a bug in that gets you. We're gonna take a cut, but anything that you do that's valuable when there's payments—all of it. And what this allows for is really fast feedback loops. If you put up an agent that nobody cares about, you know that you haven't built something useful or you haven't put it in front of the right people, and you just...
+
+Market forces, hooray! So we think this is gonna start a flywheel that's gonna start really speeding up, particularly once we have agents that do... Here is that. We want to build the best agents and then sell them. So we think that this will get increasingly fast once we get our plugins UI. Probably the first—we've got about 15 of these plugins for the bounties that bindings are ending today.
+
+But the plugins from now on are gonna be paid revenue share. So the builder of an agent, yeah, the UI is gonna get some payment for any plugins that are used and upgraded with it. Now they're doing things like Bitcoin stats—you want your agent to pull in information about the mempool or the fees or the nodes or blah blah blah.
+
+Click that and now your agent has access to that. Got a lot of that kind of functionality, Bill. We just got to hook it up to... First, we want to get this, get the... And I'm holding this also, this is kind of like the... Doing an example payment, like a split. Okay, so the next few videos we're going to go over payments, payouts, how we're making all this information publicly transparent and inspectable: the accounting dashboards and agent credits and all that stuff are gonna be built this week. Next week, we'll start lean.
