grab commentes too

--- a/docs/solve-runs/20250130-1240.md
+++ b/docs/solve-runs/20250130-1240.md
@@ -1,4 +1,4 @@
-```bash
+````bash
 ➜  openagents git:(loop2) cargo run --bin solver -- --issue 637
 warning: constant `ERR_NO_JSON` is never used
  --> src/bin/solver_impl/planning.rs:7:7
@@ -66,8 +66,12 @@ In summary, the key steps are:
     ],
     "reasoning": "This modification enhances PR title generation by introducing semantic versioning (SemVer) prefixes such as \"feat:\", \"fix:\", and \"chore:\". This improves categorization, making it easier to track the nature of changes through commit history."
 }
-```
+````
+
 Plan generation complete.
 
 Error: Invalid JSON format: control character (\u0000-\u001F) found while parsing a string at line 6 column 0
+
+```
+
 ```
