--- a/docs/solve-runs/20250131-1830.md
+++ b/docs/solve-runs/20250131-1830.md
@@ -1,4 +1,4 @@
-```bash
+````bash
 ➜  openagents git:(solver/state-loop-651) cargo run --bin solver
    Compiling openagents v0.1.0 (/Users/christopherdavid/code/openagents)
     Finished `dev` profile [unoptimized + debuginfo] target(s) in 4.25s
@@ -1199,4 +1199,4 @@ This indicates a well-organized project with extensive test coverage, ensuring r
     Reason:  The function `test_comment_context_generation` tests the ability to generate context for comments. This ensures that comments are relevant and informative, providing the necessary background information for reviewers.
 
 Solver completed successfully.
-```
+````
